2002-06-24  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-transfer.c (soup_transfer_read_cb): If we no
	longer have a read_chunk_cb callback, we can just cancel the
	read.  Fixes a crash when you soup_message_cancel() in the middle
	of a download.

2002-06-19  Joe Shaw  <joe@ximian.com>

	* configure.in: Bump SOUP_AGE up to 3, SOUP_CURRENT up to 6.
	Update version to 0.7.5.

	* src/libsoup/soup-private.h (VERSION): Update to 0.7.5

	* src/libsoup/soup-server.c (soup_server_context_get_client_address,
	soup_server_context_get_client_host): Added.  Functions for
	getting info about the host making the call.

2002-06-13  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-uri.[ch]: Add SOUP_PROTOCOL_FILE as a recognized
	URI type.

2002-06-07  Dan Winship  <danw@ximian.com>

	* configure.in (SOUP_AGE, SOUP_CURRENT, SOUP_REVISION): Bump age
	and current. Update version to 0.7.4.
	(AC_OUTPUT): Remove tests/Makefile for now since autoconf 2.52
	won't deal with it being missing, and Makefile.am says there are
	automake issues with trying to get it disted.

	* src/libsoup/soup-private.h (VERSION): Update to 0.7.4

2002-06-06  Dan Winship  <danw@ximian.com>

	* src/libsoup/soup-transfer.c (decode_chunk): Rewrite this a bunch
	to handle trailing entity headers, and not crash on an assertion
	failure if the server sends the final "\r\n" in a separate packet
	from the preceding "0\r\n".

2002-05-31  Joe Shaw  <joe@ximian.com>

	* acinclude.m4: Added.  Includes the pkg-config, glib1 and glib2
	macros so it can be disted on a machine without devel packages
	from both installed.

	* configure.in: Remove JP's commit, as it shouldn't be necessary
	anymore.

2002-05-27  JP Rosevear  <jpr@ximian.com>

	* configure.in: see if we can handle the case where glib2 is not
	installed and we are in maintainer mode

2002-05-24  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-server.c (read_headers_cb): According to RFC
	2616, section 5.2, an absolute URI passed in during a request gets